Fix compiling errors and accidental regressions